# local-portfolio-tracker

./: Cargo.toml  README.md
data/: coingecko.csv
portfolios/: basic_eur.csv  basic_usd.csv  example.csv
src/: add_tx.rs  cli.rs  csv.rs  currency.rs  lib.rs  main.rs  portfolio.rs  portfolio_file.rs  position.rs  quote.rs  quote_currency.rs  report.rs  settings.rs  test_utils.rs  trade.rs  trading_pair.rs  tx.rs
tests/: 01_help.rs  02_portfolios.rs  README.md  add_tx_cmd_tests.rs  cli.rs  cli_tests.rs  currency_tests.rs  fixtures.rs  help_cmd_tests.rs  list_cmd_tests.rs  new_cmd_tests.rs  report_cmd_tests.rs  show_cmd_tests.rs
tests/cli/: add_tx_tests.rs  help_tests.rs  list_tests.rs  new_tests.rs  report_tests.rs  show_tests.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs
tests/fixtures/: mod.rs
