[package]
name = "portfolio-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
csv = "1.3.1"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rust_decimal = { version = "1.39.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_test = "1.0.177"
time = { version = "0.3.44", features = ["serde", "macros"] }
