[package]
name = "portfolio-tracker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "get_coingecko_tickers"
path = "bin/get_coingecko_tickers.rs"

[dependencies]
anyhow = "1.0.100"
assert_cmd = "2.1.1"
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
config = "0.15.19"
csv = "1.3.1"
log = "0.4.28"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rstest = "0.26.1"
rust_decimal = { version = "1.39.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_plain = "1.0.2"
serde_test = "1.0.177"
shellexpand = "3.1.1"
tempfile = "3.23.0"
thousands = "0.2.0"
time = { version = "0.3.44", features = ["serde", "macros", "formatting"] }
